--- a/src/UrlUtility.API/appsettings.Development.json
+++ b/src/UrlUtility.API/appsettings.Development.json
@@ -1,6 +1,11 @@
 {
+  "Cosmo": {
+    "ConnectionString": "<connection_string_for_cosmodb_Core(SQL)_API>",
+    "DatabaseName": "UrlDatabase",
+    "ContainerName": "Url"
+  },
   "MongoDbOptions": {
-    "ConnectionString": "<connection_string_for_cosmodb_or_mongodb>",
+    "ConnectionString": "<connection_string_for_cosmodb(API_FOR_MONGODB)_or_mongodb>",
     "DatabaseName": "UrlDatabase"
   },
   "Logging": {
