Entity framework core implementation for CosmoDB added

--- a/src/UrlUtility.API/appsettings.Development.json
+++ b/src/UrlUtility.API/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "Cosmo": {
-    "ConnectionString": "<connection_string_for_cosmodb_Core(SQL)_API>",
+    "ConnectionString": "<azure_endpoint>",
     "DatabaseName": "UrlDatabase",
     "ContainerName": "Url"
   },
