--- a/src/UrlUtility.API/UrlUtility.API.csproj
+++ b/src/UrlUtility.API/UrlUtility.API.csproj
@@ -21,6 +21,8 @@
   <ItemGroup>
     <PackageReference Include="Hashids.net" Version="1.5.0" />
     <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.27.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.17" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Cosmos" Version="5.0.17" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.11.1" />
     <PackageReference Include="MongoDB.Driver" Version="2.15.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
