Sql DB added for ShortUrl implementation

--- a/src/UrlUtility.API/appsettings.Development.json
+++ b/src/UrlUtility.API/appsettings.Development.json
@@ -1,12 +1,19 @@
 {
   "Cosmo": {
-    "ConnectionString": "<azure_endpoint>",
+    "ConnectionString": "<connection_string_for_cosmodb>",
     "DatabaseName": "UrlDatabase",
     "ContainerName": "Url"
   },
   "MongoDbOptions": {
     "ConnectionString": "<connection_string_for_cosmodb(API_FOR_MONGODB)_or_mongodb>",
     "DatabaseName": "UrlDatabase"
+  },
+  "SqlServer": {
+    "ConnectionString": "Data Source=DESKTOP-BRI3CPQ;Initial Catalog=ShorUrl;Integrated Security=True"
+  },
+  "HashIds": {
+    "Salt": "SomethingTotalyRandom123321",
+    "Lenght": 6
   },
   "Logging": {
     "LogLevel": {
